--- a/wanghan/style.css
+++ b/wanghan/style.css
@@ -6,7 +6,6 @@ html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  line-height: 1;
 }
 header {
   padding: 2rem 2rem;
@@ -14,17 +13,9 @@ header {
   margin-bottom: 20rem;
   display: flex;
   gap: 2rem;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-
-/* .index0:link,
-.index0:visited {
-}
-
-.index0:hover,
-.index0:active {
-  cursor: pointer;
-} */
 
 .headshot {
   height: 10rem;
@@ -40,11 +31,12 @@ header {
 
 .navi {
   display: flex;
-  gap: 10rem;
+  /* flex-wrap: wrap; */
+  gap: 8rem;
 }
 
-a:link,
-a:visited {
+header a:link,
+header a:visited {
   font-size: 2.4rem;
   text-decoration: none;
   align-self: center;
@@ -58,13 +50,38 @@ a:active {
   color: #7daed5;
 }
 
+.account:link,
+.account:visited {
+  color: #7daed5;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
 footer {
   margin-top: 20rem;
   background-color: #f1f1f1;
-  font-size: 2.4rem;
-  padding: 2rem 2rem;
+  font-size: 1.6rem;
+  padding: 4rem 4rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 5rem;
+}
+
+footer p {
+  color: #888;
+}
+
+.zhuwenzi {
+  padding: 2rem;
+  font-family: sans-serif;
+  font-size: 2.4rem;
+  letter-spacing: 0.5px;
+  line-height: 1.7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* 手机适配 */
+@media (max-width: 600px) {
 }
